# FluentNet

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
fluentnet/: attention.py  fluentnet.py  seresnet.py
scripts/: run_tests.sh
tests/: conftest.py  test_fluentnet.py
