[tool.poetry]
name = "fluentnet"
version = "0.0.0"
description = "FluentNet for detecting speech disfluencies."
authors = ["Jeffrey Wardman <jeffrey.wardman@yahoo.com.au>"]
repository = "https://github.com/jeffreywardman/FluentNet"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
isort = "^5.10.1"
einops = "^0.4.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.8.2"
isort = "^5.10.1"
poethepoet = "^0.13.1"

[tool.poe.tasks]
download_torch = "python -m pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
multi_line_output=3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line-length = 140
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
^/(
  (
    \.eggs
    | \.git
    | build
    | dist
    | wandb
  )
)
'''

[tool.isort]
line_length = 140
profile = "black"
src_paths = ["fluentnet", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--doctest-modules", "--cov=fluentnet", "--cov-report=term-missing"]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 140